# Compliance-Checker

./: Dockerfile  README.md  compliance_checker.py  pyproject.toml  server.py  utils.py
